# contact-form

./: .gitignore  README.md  environment.yml
contact-form-backend/contact/contact/: schemas.py  settings.py  urls.py
contact-form-backend/contact/sendmail/: urls.py  views.py
contact-form-vue/: index.html  package-lock.json  package.json
contact-form-vue/src/: App.vue
contact-form-vue/src/components/: ContactForm.vue
contact/contact/: settings.py  urls.py
contact/sendmail/: apps.py  checks.py  forms.py  urls.py  views.py
contact/sendmail/templates/sendmail/: base.html  contact_form.html  footer.html  header.html  navigation.html
contact/sendmail/templatetags/: navigation.py
contact/static/: styles.css
gridh_contact_forms/: MANIFEST.in  README.rst  environment.yml  pyproject.toml  requirements.txt
gridh_contact_forms/gridh_contact_forms/: apps.py  checks.py  forms.py  urls.py  views.py
gridh_contact_forms/gridh_contact_forms/api/: serializers.py  views.py
gridh_contact_forms/gridh_contact_forms/templates/gridh_contact_forms/: contact_form.html
gridh_contact_forms/gridh_contact_forms/tests/: test_api.py  test_views.py
